--- a/rx-preferences-sample/src/main/AndroidManifest.xml
+++ b/rx-preferences-sample/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.f2prateek.rx.preferences.sample">
-  <application
-      android:label="@string/app_name">
-    <activity
-        android:label="@string/app_name"
-        android:name=".SampleActivity">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-        <category android:name="android.intent.category.LAUNCHER"/>
-        <category android:name="android.intent.category.DEFAULT"/>
-      </intent-filter>
-    </activity>
-  </application>
+<manifest package="com.f2prateek.rx.preferences.sample"
+          xmlns:android="http://schemas.android.com/apk/res/android">
+    <application
+        android:label="@string/app_name">
+        <activity
+            android:name=".SampleActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+    </application>
 </manifest>
