--- a/rx-preferences/build.gradle
+++ b/rx-preferences/build.gradle
@@ -1,31 +1,32 @@
 apply plugin: 'com.android.library'
 
 android {
-  compileSdkVersion rootProject.ext.compileSdkVersion
-  buildToolsVersion rootProject.ext.buildToolsVersion
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
-  compileOptions {
-    sourceCompatibility rootProject.ext.javaVersion
-    targetCompatibility rootProject.ext.javaVersion
-  }
+    compileOptions {
+        sourceCompatibility rootProject.ext.javaVersion
+        targetCompatibility rootProject.ext.javaVersion
+    }
 
-  defaultConfig {
-    minSdkVersion rootProject.ext.minSdkVersion
-  }
+    defaultConfig {
+        minSdkVersion rootProject.ext.minSdkVersion
+    }
 
-  lintOptions {
-    textReport true
-    textOutput 'stdout'
-  }
+    lintOptions {
+        textReport true
+        textOutput 'stdout'
+    }
 }
 
 dependencies {
-  compile deps.annotations
-  compile deps.rxjava
+    compile deps.annotations
+    compile deps.rxjava
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$rootProject.kotlinVersion"
 
-  testCompile deps.junit
-  testCompile deps.assertj
-  testCompile deps.robolectric
+    testCompile deps.junit
+    testCompile deps.assertj
+    testCompile deps.robolectric
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
